--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,8 @@
 DirectoryIndex index.html
+
+# disable directory browsing
+        
+        Options ExecCGI Includes IncludesNOEXEC SymLinksIfOwnerMatch -Indexes
+        
+        # enable directory browsing
+        Options All +Indexes
